Fix scroll to bottom on mobile page

--- a/resources/less/forum/ChatPage.less
+++ b/resources/less/forum/ChatPage.less
@@ -1,3 +1,12 @@
 .ChatPage {
-    
+    .ChatInput {
+        position: fixed;
+        bottom: 0;
+        display: flex;
+        width: 100%;
+    }
+
+    .name {
+        color: inherit !important;
+    }
 }
