--- a/resources/less/forum/ChatViewport.less
+++ b/resources/less/forum/ChatViewport.less
@@ -1,5 +1,4 @@
 .ChatViewport {
-
     .UserMention {
         .user-select(none);
 
@@ -15,14 +14,38 @@
         color: #ff94c1 !important;
     }
 
+    .scroller {
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        background: @color-hr;
+        opacity: 0.7;
+        color: #fff;
+        right: 30px;
+        bottom: 55px;
+        border-radius: 100px;
+        line-height: 40px;
+        font-size: 30px;
+        text-align: center;
+        cursor: pointer;
+        .transition(background .1s);
+
+        &:hover {
+            opacity: 1.0;
+        }
+
+        .loading {
+            position: absolute;
+            top: 425px;
+            float: left;
+            right: 15px;
+        }
+    }
+
     .wrapper {
         overflow-y: scroll;
         overflow-x: hidden;
         min-height: 300px;
-
-        @media @phone {
-            height: 400px;
-        }
 
         .welcome {
             margin: auto;
