--- a/resources/less/forum/NeonChatFrame.less
+++ b/resources/less/forum/NeonChatFrame.less
@@ -7,18 +7,12 @@
 
     @media @phone {
         right: 0 !important;
+
+        .ChatViewport .wrapper {
+            height: 400px;
+        }
     }
 
-}
-
-
-
-
-
-
-
-
-.NeonChatFrame {
     .frame {
         display: flex;
         position: relative;
@@ -118,34 +112,6 @@
         #chat-viewport {
             overflow: hidden;
         }
-
-        .scroller {
-            width: 40px;
-            height: 40px;
-            position: absolute;
-            background: @color-hr;
-            opacity: 0.7;
-            color: #fff;
-            right: 30px;
-            bottom: 55px;
-            border-radius: 100px;
-            line-height: 40px;
-            font-size: 30px;
-            text-align: center;
-            cursor: pointer;
-            .transition(background .1s);
-
-            &:hover {
-                opacity: 1.0;
-            }
-
-        .loading {
-            position: absolute;
-            top: 425px;
-            float: left;
-            right: 15px;
-        }
-    }
 
     *[data-title]:after {
         content: '';
